# dcomp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  build_coverage  coverage.sh  dcompdbd  readme.MD  test.json
CMake/: PrepareVersion.cmake
DockerFiles/dcompauthd/: Dockerfile  build.sh
DockerFiles/dcompd/: Dockerfile  build.sh
DockerFiles/dcompdmd/: Dockerfile  build.sh
DockerFiles/dcompestd/: Dockerfile  build.sh
Tests/: exclude  test.py
Tests/Automatic/: test.py
Tests/slurm_cluster/: cleanup.sh  extra_start.sh  init.sh
dcomp/cli/: cli.go  command.go  command_test.go  cp.go  cp_test.go  helpers.go  helpers_test.go  jobinfo.go  jobinfo_test.go  kill.go  kill_test.go  ls.go  ls_test.go  ps.go  ps_test.go  rm.go  rm_test.go  setup.go  setup_test.go  submit.go  submit_test.go  wait.go  wait_test.go
dcomp/common_structs/: job_structs.go
dcomp/daemon/: authorization.go  authorization_test.go  common.go  daemon.go  daemon_test.go  listroutes.go  login.go  login_test.go  patch.go  patch_test.go  ps.go  ps_test.go  responses.go  rm.go  rm_test.go  setup.go  setup_test.go  setup_test.yaml  submit.go  submit_test.go
dcomp/database/: database.go  database_test.go  mockdatabase.go  mongodb.go  mongodb_test.go
dcomp/dcomp/: dcomp.go
dcomp/jobdatabase/: database_test.go  mockdatabase.go  mongodb_test.go
dcomp/main/: dcomp.go
dcomp/resources/: commands.go  commands_test.go  plugin.go  plugin_routes.go  resources.go  submit_test.go
dcomp/server/: authorization.go  authorization_test.go  mockserver.go  server.go  server_authorization_test.go  server_test.go
dcomp/structs/: jobs.go  jobs_test.go  resources.go
dcomp/utils/: common.go  io.go  io_test.go  kerberos.go  routes.go
dcomp/version/: version.go  version_lib.go  (+1 more)
scripts/: create_cert.sh  restart.sh  restart_db.sh  start_containers.sh  start_db.sh  stop_containers.sh  stop_db.sh
source/: readme
(+221 files in other folders)
